<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SageTV MiniClient</string>

    <string name="media_player_preferences">Media Player</string>
    <string name="title_use_vlc_preference">Use VLC</string>
    <string name="title_use_hardware_acceleration_preference">Use Hardware Acceleration</string>
    <string name="summary_use_hardware_acceleration_preference">If disabled, then no hardware acceleration will be used when decoding the video.</string>
    <string name="logging_preferences">Logging</string>
    <string name="title_use_log_to_sdcard_preference">Log to File</string>
    <string name="summary_use_log_to_sdcard_acceleration_preference">If enabled, all logging will go to the sagetv-miniclient.txt log file on the root of the SD CARD</string>
    <string name="title_list_loglevels_preference">Logging Level</string>
    <string name="summary_list_loglevels_preference">(%s) - The logging level</string>
    <string name="dialog_title_list_loglevels_preference">Set Logging Level</string>
    <string name="dialog_title_list_streaming_mode_preference">Set Stream Mode</string>
    <string name="summary_list_streaming_mode_preference">(%s) - If not using LiveTV, you can set this to Pull, so that seeking will work.</string>
    <string name="title_list_streaming_mode_preference">Streaming Mode</string>
    <string name="send_log">Send Log</string>
    <string name="send_log_summary">If using Send Log, then make sure that you are NOT logging to file.  Logging to a File will result in Send Log only capturing a partial log.</string>
    <string name="auto_connect_settings">Auto Connect</string>
    <string name="summary_auto_connect_to_last_server_preference">Automatically connect to the last connected server on start up</string>
    <string name="title_auto_connect_to_last_server_preference">Auto Connect</string>
    <string name="dialog_title_auto_connect_delay_preference">Set Auto Connect Timeout</string>
    <string name="title_auto_connect_delay_preference">Auto Connect Delay</string>
    <string name="summary_auto_connect_delay_preference">(%s) - The number of seconds to wait before auto connecting to the last server.</string>
    <string name="msg_auto_connect">Will Auto Connect in %s Seconds</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="debug_preferences">Debug Settings</string>
    <string name="summary_debug_log_unmapped_keypresses_preference">If enabled then remote key presses that are not mapped will be show as a message in the UI when they happen</string>
    <string name="title_debug_log_unmapped_keypresses_preference">Show Unmapped Keypresses</string>
    <string name="terminate_onpause_summary">If true, then when the app pauses, it will fully terminate the application and close all connections</string>
    <string name="terminate_onpause_title">Terminate on Pause</string>
    <string name="force_nonlocal_connection_title">Force non local network</string>
    <string name="force_nonlocal_connection_summary">When enabled, it may increase rendering performance on a WIRED connection.  Never enable for WIFI or Placeshifter.</string>
    <string name="use_bitmap_images_title">Use Bitmap Images</string>
    <string name="use_bitmap_images_summary">Disabling this may increase performance for WIRED connections, but should never be enabled for WIFI connections</string>
    <string name="GFX_SURFACES_title">Use Surfaces</string>
    <string name="GFX_SURFACES_summary">Disabling this will decrease rendering performance, but may reduce the screen flicker</string>
    <string name="application_settings">Application Settings</string>
    <string name="long_press_select_for_osd_preference">Long Press Select for OSD</string>
    <string name="long_press_select_for_osd_preference_summary">If enabled, then long pressing the SELECT button will bring up the built-in Navigation.  Otherwise, it should bring up the SageTV Options.</string>
    <string name="use_exoplayer_preference">If enabled, then ExoPlayer will be used for video playback</string>
    <string name="use_exoplayer_preference_title">Use ExoPlayer</string>
    <string name="title_use_http_proxy_preference">Use HTTP Proxy</string>
    <string name="summary_use_http_proxy_preference">Some players cannot access SageTV streams and require an http proxy.</string>
    <string name="hardware_decoders">Hardware Decoders</string>
    <string name="msg_player_failed">Failed to play the selected media file (URL: %s)</string>
    <string name="use_stateful_remote_title">Use Stateful Remote</string>
    <string name="use_stateful_remote_summary">If enabled, then the Select will be Pause/Play if the Video UI is visible</string>
    <string name="summary_announce_software_decoder_preference">If enabled, a message will appear when using software decoding</string>
    <string name="title_announce_software_decoder_preference">Show message when using Software Decoders</string>
    <string name="main_label_settings">Settings</string>
    <string name="sage_title">SageTV MiniClient</string>
    <string name="title_switch_player">Change Default Video Player</string>
    <string name="msg_switch_player">Your current player is %1$s.  Do you want to change it to %2$s?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="yes_once">Yes, One Time Only</string>
    <string name="msg_player_changed">Player has changed to %s</string>
    <string name="msg_player_changed_one_time">Player has changed to %1$s, but will revert to %2$s after the next video play.</string>
    <string name="use_native_resolution_title">Use Native Resolution</string>
    <string name="use_native_resolution_summary">If disabled, then the resolution reported to sagetv will be half of the native resolution, and the screen will be scaled on the client to the native resolution.  You might do this on older hardware.</string>
    <string name="exit_to_home_screen_title">Exit to Home Screen</string>
    <string name="exit_to_home_screen_summary">If true, then when SageTV exits, it will exit back to the Home Screen and not to the Server Selector</string>
    <string name="button_close">Close</string>
    <string name="msg_no_locator">Item does not have a locator id</string>
    <string name="msg_remove_server">Are you sure you want to remove this server?</string>
    <string name="title_remove_server">Remove Server?</string>
    <string name="msg_connecting_locator">Connecting to %s using Locator Service…</string>
    <string name="msg_connecting">Connecting to %s…</string>
    <string name="title_detailed_buffer_stats">Detailed Push Buffer Stats</string>
    <string name="summary_detailed_buffer_stats">Send detailed push buffer statistics to the server</string>
    <string name="msg_change_aspect_ratio">Aspect Ratio: %s</string>
</resources>
