<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/media_player_preferences">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_hardware_acceleration"
            android:summary="@string/summary_use_hardware_acceleration_preference"
            android:title="@string/title_use_hardware_acceleration_preference" />

        <ListPreference
            android:defaultValue="dynamic"
            android:dialogTitle="@string/dialog_title_list_streaming_mode_preference"
            android:entries="@array/entries_list_streaming_mode_preference"
            android:entryValues="@array/entryvalues_list_streaming_mode_preference"
            android:key="streaming_mode"
            android:summary="@string/summary_list_streaming_mode_preference"
            android:title="@string/title_list_streaming_mode_preference" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/application_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="long_press_select_for_osd"
            android:summary="@string/long_press_select_for_osd_preference_summary"
            android:title="@string/long_press_select_for_osd_preference" />


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/auto_connect_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_connect_to_last_server"
            android:summary="@string/summary_auto_connect_to_last_server_preference"
            android:title="@string/title_auto_connect_to_last_server_preference" />

        <ListPreference
            android:dependency="auto_connect_to_last_server"
            android:defaultValue="10"
            android:dialogTitle="@string/dialog_title_auto_connect_delay_preference"
            android:entries="@array/entries_list_auto_connect_delay_preference"
            android:entryValues="@array/entryvalues_list_auto_connect_delay_preference"
            android:key="auto_connect_delay"
            android:summary="@string/summary_auto_connect_delay_preference"
            android:title="@string/title_auto_connect_delay_preference" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="app_destroy_on_pause"
            android:summary="@string/terminate_onpause_summary"
            android:title="@string/terminate_onpause_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/debug_preferences">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug_log_unmapped_keypresses"
            android:summary="@string/summary_debug_log_unmapped_keypresses_preference"
            android:title="@string/title_debug_log_unmapped_keypresses_preference" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_bitmap_images"
            android:summary="@string/use_bitmap_images_summary"
            android:title="@string/use_bitmap_images_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="GFX_SURFACES"
            android:summary="@string/GFX_SURFACES_summary"
            android:title="@string/GFX_SURFACES_title" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/logging_preferences">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_log_to_sdcard"
            android:summary="@string/summary_use_log_to_sdcard_acceleration_preference"
            android:title="@string/title_use_log_to_sdcard_preference" />

        <ListPreference
            android:defaultValue="debug"
            android:dialogTitle="@string/dialog_title_list_loglevels_preference"
            android:entries="@array/entries_list_loglevels_preference"
            android:entryValues="@array/entryvalues_list_loglevels_preference"
            android:key="log_level"
            android:summary="@string/summary_list_loglevels_preference"
            android:title="@string/title_list_loglevels_preference" />

        <Preference
            android:key="sendlog"
            android:summary="@string/send_log_summary"
            android:title="@string/send_log" />
    </PreferenceCategory>

    <PreferenceCategory android:title="About">
        <Preference
            android:key="version"
            android:summary=""
            android:title="Version" />
        <Preference
            android:key="clientid"
            android:summary=""
            android:title="Cliend ID" />
    </PreferenceCategory>


</PreferenceScreen>